# snapshotd

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  all_prompts.txt
docs/: Doxyfile  design-reference.dox  doxygen-main.dox  generate_docs.sh  it-review-guide.dox  safe-root-criu-broker-design.md
docs/fallback/: design-reference.md  index.md  it-review-guide.md
packaging/: BUILD.bazel  build_deb.sh
packaging/debian/DEBIAN/: BUILD.bazel  conffiles  postinst  preinst  prerm
packaging/debian/etc/snapshotd/: BUILD.bazel  snapshotd.conf
packaging/debian/systemd/: BUILD.bazel  snapshotd.service  snapshotd.socket
packaging/debian/usr/lib/tmpfiles.d/: snapshotd.conf
packaging/debian/usr/share/doc/snapshotd/: BUILD.bazel  README.Debian
src/csrc/: BUILD.bazel  client.cc  client.h  daemon.cc  daemon.h  protocol.cc  protocol.h  snapshot_worker_main.cc  snapshotctl_main.cc  snapshotd_main.cc  store.cc  store.h  util.cc  util.h  worker.cc  worker.h
tests/csrc/: BUILD.bazel  daemon_integration_test.cc  docs_tooling_test.sh  protocol_store_test.cc  restore_stub.cc
tests/csrc/fake_docs_tools/: clang-doc  doxygen  mkdocs
