package(default_visibility = ["//visibility:public"])

COMMON_COPTS = [
    "-std=c++17",
    "-Wall",
    "-Wextra",
]

filegroup(
    name = "docs_tooling_fake_tools",
    srcs = glob(["fake_docs_tools/*"]),
)

cc_test(
    name = "protocol_store_test",
    srcs = ["protocol_store_test.cc"],
    deps = [
        "//src/csrc:snapshotd_lib",
    ],
    copts = COMMON_COPTS,
    linkopts = ["-lutil"],
)

cc_test(
    name = "daemon_integration_test",
    srcs = ["daemon_integration_test.cc"],
    data = [
        "//src/csrc:snapshot-worker",
        "//src/csrc:snapshotctl",
        "//src/csrc:snapshotd",
    ],
    deps = [
        "//src/csrc:snapshotd_lib",
    ],
    copts = COMMON_COPTS,
)

sh_test(
    name = "docs_tooling_test",
    srcs = ["docs_tooling_test.sh"],
    data = [
        "//:docs_inputs",
        "//src/csrc:docs_sources",
        ":docs_tooling_fake_tools",
    ],
)
