package(default_visibility = ["//visibility:public"])

COMMON_COPTS = [
    "-std=c++17",
    "-Wall",
    "-Wextra",
]

cc_binary(
    name = "restore_stub",
    srcs = ["restore_stub.cc"],
    copts = COMMON_COPTS,
)

cc_test(
    name = "protocol_store_test",
    srcs = ["protocol_store_test.cc"],
    deps = [
        "//src/csrc:snapshotd_lib",
    ],
    copts = COMMON_COPTS,
    linkopts = ["-lutil"],
)

cc_test(
    name = "daemon_integration_test",
    srcs = ["daemon_integration_test.cc"],
    data = [
        ":restore_stub",
        "//src/csrc:snapshot-worker",
        "//src/csrc:snapshotctl",
        "//src/csrc:snapshotd",
    ],
    deps = [
        "//src/csrc:snapshotd_lib",
    ],
    copts = COMMON_COPTS,
    linkopts = ["-lutil"],
)

sh_test(
    name = "docs_tooling_test",
    srcs = ["docs_tooling_test.sh"],
    data = [
        "//:docs_inputs",
        "//src/csrc:docs_sources",
    ],
)
